# KRand

./: CMakeLists.txt  KRand-dev.deb  KRand.cpp  KRand.h  README.md  build-deb.sh  build.sh  client_receiver.cpp  main  main.cpp  test  test.cpp  test_krand
KRand-dev/DEBIAN/: control
KRand-dev/usr/local/include/: KRand.h
src/: KRand.cpp  test.cpp
